<resources>
    <string name="app_name">Eisen Flow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>

    <string name="quadrantOne">Do It Now</string>
    <string name="quadrantTwo">Plan It</string>
    <string name="quadrantTree">Delegate It</string>
    <string name="quadrantFour">Drop It</string>

    <!-- Add Task Activity -->
    <string name="save_btn">Save</string>
    <string name="enter_task_hint">Enter task name...</string>
    <string name="task_priority_txt">Task priority</string>
    <string name="time_txt">All day</string>
    <string name="due_date_txt">Due date</string>
    <string name="note_txt">Notes</string>
    <string name="reminder_txt">Repeating reminder</string>
    <string name="daily_txt">Daily</string>
    <string name="weekly_txt">Weekly</string>
    <string name="monthly_txt">Monthly</string>
    <string name="yearly_txt">Yearly</string>
    <string name="mon_txt">Mon</string>
    <string name="tue_txt">Tue</string>
    <string name="wed_txt">Wed</string>
    <string name="thu_txt">Thu</string>
    <string name="fri_txt">Fri</string>
    <string name="sat_txt">Sat</string>
    <string name="sun_txt">Sun</string>
    <string name="today_txt">Today</string>


    <!-- Priority Dialog -->
    <string name="u_and_i">Urgent and Important</string>
    <string name="do_it">Do it now</string>
    <string name="i_not_u">Important not Urgent</string>
    <string name="decide">Decide when</string>
    <string name="u_not_i">Urgent not Important</string>
    <string name="delegate">Delegate it</string>
    <string name="not_i_not_u">not Important not Urgent</string>
    <string name="dump">Dump it</string>

    <!-- SnackBar Messages -->
    <string name="add_task_priority_alert">Choose task priority.</string>
    <string name="add_task_name_alert">Missing task name.</string>
    <string name="add_task_date_alert">Your date is in the past.</string>
    <string name="add_task_time_alert">Your time is in the past.</string>
    <string name="add_task_reminder_alert">Weekly Reminder: Check at least one day.</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="progress_added">Good job! You added progress to your task!</string>
    <string name="progress_tip">Good job! You reached 100% !</string>
    <string name="priority_0_tip_snackbar">To help your productivity, schedule \'Do it now\' just for the next day.</string>
    <string name="save_alert">Something went wrong while saving your task. Please try again.</string>
    <string name="task_deleted_msg">Your task was deleted successfully!</string>
    <string name="db_alert">Something went wrong when saving data!</string>
    <string name="monthly_reminder_tip">Tip: Pick day of month and hour.</string>
    <string name="yearly_reminder_tip">Tip: Pick month, day of month and hour.</string>

    <string name="add_task_alert_title">Alert</string>

    <!-- Tip Messages -->
    <string name="tip_title">Tip</string>
    <string name="tip_calendar_plus_msg">From now on, you\'re going to add progress to your task like that.</string>

    <!-- Priority Tips -->
    <string name="priority_tip_0"><b>DO IT</b> \n <i>Handle now. Today\'s tasks.</i></string>
    <string name="priority_tip_1"><b>DECIDE</b> \n <i>Plan it. Invest in it every day.</i></string>
    <string name="priority_tip_2"><b>DELEGATE</b> \n <i>Share it. Let\'s somebody else to handle it.</i></string>
    <string name="priority_tip_3"><b>DROP</b> \n <i>Unnecessary. Usually a distraction.</i></string>

    <!-- MainActivity -->
    <string name="no_tasks_msg">No tasks to show</string>
    <string name="no_tasks_add_msg">\"Get specific about your goals \nand keep them visible\"</string>

    <!-- Reminders -->
    <string name="notify_new_task_message">A task needs to be reviewed!</string>
    <string name="notify_new_task_title">Task Reminder!</string>

    <!-- Notification -->
    <string name="notification_done">Done</string>
    <string name="notification_add_progress">Add Progress</string>
    <string name="weekly_tip_notification">Hey, some task are waiting!</string>
    <string name="daily_evening_tip_notification">Productive day tomorrow? Plan it now!</string>

    <!-- Edit Preview -->
    <string name="edit_preview_none_txt">None</string>

    <!-- Splash Screens -->
    <string name="splash_app_name">EisenFlow</string>
    <string name="splash_quote">“What is important is seldom urgent \nand what is urgent is seldom important.”</string>
    <string name="splash_quote_author">― Dwight D. Eisenhower</string>
    <string name="splash_2_title">Meaning of your colors:</string>
    <string name="splash_2_red_title">Do It Now!</string>
    <string name="splash_2_red_content">Urgent - Important: tasks you will do immediately</string>
    <string name="splash_2_green_title">Decide When</string>
    <string name="splash_2_green_content">Important - Not Urgent: tasks you will schedule to \ndo later</string>
    <string name="splash_2_yellow_title">Delegate It</string>
    <string name="splash_2_yellow_content">Urgent - Not Important: tasks you will delegate to \nsomeone else</string>
    <string name="splash_2_gray_title">Dump It!</string>
    <string name="splash_2_gray_content">Not Urgent - Not Important: tasks you will dump.\nTime wasters!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got It</string>
    
    <!-- Send Report E-Mail -->
    <string name="chooserTitle">Send report to developer</string>
    <string name="report_body">Kind Regards!\nTell me about your experience with the app. What went wrong?</string>

    <!-- Rate App -->
    <string name="rate_body">If you enjoy using <b>Eisen Flow</b>, please take a moment to rate it.\nThanks for your support!</string>
    <string name="rate_btn">Rate Eisen Flow</string>
    <string name="remind_me_btn">Remind me later</string>
    <string name="not_now_btn">Not now</string>
    <string name="rate_alert">Something went wrong. \nPlease try again later!</string>
</resources>
