<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reminder_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/time_divider"
    android:layout_marginLeft="@dimen/task_standard_margin"
    android:layout_marginRight="@dimen/task_standard_margin"
    android:gravity="center_vertical"
    >
    <RelativeLayout
        android:id="@+id/reminder_clickable_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/reminder_icon"
            android:layout_width="@dimen/task_icon_size"
            android:layout_height="@dimen/task_icon_size"
            android:src="@drawable/repeat_reminder"
            />
        <TextView
            android:id="@+id/reminder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_txt"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/reminder_icon"
            android:textSize="@dimen/task_font_size"
            android:layout_marginLeft="@dimen/task_standard_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reminder_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="visible"
        >
        <RadioGroup
            android:id="@+id/radio_group_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/task_standard_margin"
            android:layout_marginBottom="10dp"
            >
            <RadioButton
                android:id="@+id/daily_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/daily_txt"
                />
            <RadioButton
                android:id="@+id/weekly_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/weekly_txt"
                />
            <RadioButton
                android:id="@+id/monthly_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/monthly_txt"
                />
            <RadioButton
                android:id="@+id/yearly_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/yearly_txt"
                />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/check_group_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/radio_group_reminder"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <CheckBox
                    android:id="@+id/mon_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/date"
                    android:text="@string/mon_txt"
                    />
                <CheckBox
                    android:id="@+id/tue_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/date"
                    android:text="@string/tue_txt"
                    />
                <CheckBox
                    android:id="@+id/wed_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/date"
                    android:text="@string/wed_txt"
                    />
                <CheckBox
                    android:id="@+id/thur_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/date"
                    android:text="@string/thu_txt"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/task_standard_margin"
                >
                <CheckBox
                    android:id="@+id/fri_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/date"
                    android:text="@string/fri_txt"
                    />
                <CheckBox
                    android:id="@+id/sat_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/date"
                    android:text="@string/sat_txt"
                    />
                <CheckBox
                    android:id="@+id/sun_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/date"
                    android:text="@string/sun_txt"
                    />
            </LinearLayout>
        </LinearLayout>

        <!-- Cal-Time Txt Layout START -->
        <RelativeLayout
            android:id="@+id/main_reminder_txt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_below="@+id/check_group_reminder"
            android:layout_marginRight="@dimen/task_standard_margin"
            android:paddingBottom="10dp"
            >
            <LinearLayout
                android:id="@+id/reminder_cal_txt_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/reminder_date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/task_font_size"
                    android:textColor="@color/colorAccent"
                    android:text="Fri, May 27, 2016"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/reminder_time_txt_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/reminder_time_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="07:41"
                    android:textSize="@dimen/task_font_size"
                    android:textColor="@color/colorAccent"
                    />
            </LinearLayout>
        </RelativeLayout>
        <!-- Cal-Time Txt Layout END -->

    </RelativeLayout>

</LinearLayout>