<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/task_standard_margin"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/priority_line_height"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/task_standard_margin"
        >
        <ImageView
            android:id="@+id/red_img"
            android:layout_width="@dimen/priority_img_width"
            android:layout_height="match_parent"
            android:background="@color/firstQuadrant"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/red_img"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/u_and_i"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/do_it"
                android:textColor="@color/firstQuadrant"
                android:textStyle="bold"
                />
        </LinearLayout>
        <RadioButton
            android:id="@+id/do_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/task_standard_margin"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/priority_line_height"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/green_img"
            android:layout_width="@dimen/priority_img_width"
            android:layout_height="match_parent"
            android:background="@color/secondQuadrant"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/green_img"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/i_not_u"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/decide"
                android:textColor="@color/secondQuadrant"
                android:textStyle="bold"
                />
        </LinearLayout>
        <RadioButton
            android:id="@+id/decide_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/task_standard_margin"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/priority_line_height"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/yellow_img"
            android:layout_width="@dimen/priority_img_width"
            android:layout_height="match_parent"
            android:background="@color/thirdQuadrant"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/yellow_img"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/u_not_i"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/delegate"
                android:textColor="@color/thirdQuadrant"
                android:textStyle="bold"
                />
        </LinearLayout>
        <RadioButton
            android:id="@+id/delegate_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/task_standard_margin"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/priority_line_height"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/gray_img"
            android:layout_width="@dimen/priority_img_width"
            android:layout_height="match_parent"
            android:background="@color/fourthQuadrant"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/gray_img"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/not_i_not_u"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/task_standard_margin"
                android:text="@string/dump"
                android:textColor="@color/fourthQuadrant"
                android:textStyle="bold"
                />
        </LinearLayout>
        <RadioButton
            android:id="@+id/dump_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/task_standard_margin"
            />
    </RelativeLayout>
</LinearLayout>